@@ -80,7 +80,7 @@ of the Muldis D language.
 
 =item B<Parrot Hosted Muldis D>
 
-It is desired to make a Parrot (L<http://www.parrotcode.org/>) hosted
+It is desired to make a Parrot (L<http://www.parrot.org/>) hosted
 implementation of Muldis D.  This would be the most like a typical
 application programming language implementation, such that applications or
 libraries are written in Plain Text Muldis D source files, compiled, and
@@ -188,10 +188,10 @@ database industry.
 
 This web page of Whitemarsh Information Systems Corporation, run by one of
 the people on the SQL standard drafting community, has copies of the
-official SQL:2003 and SQL:1999 specification documents, and other related
-helpful documents about SQL, in PDF format.  For example, "an almost
-indistinguishable delta on the actual SQL 2003 database standard" is at
-L<http://www.wiscorp.com/sql/sql_2003_standard.zip> (warning, large file).
+official SQL:2008, SQL:2003 and SQL:1999 specification documents, and other
+related helpful documents about SQL, in PDF format.  For example,
+L<http://www.wiscorp.com/sql200n.zip> (warning, large file) has "documents
+which will likely be the documents that represent the SQL 2008 Standard".
 
 =item L<http://www.unicode.org/standard/standard.html>
 
