@@ -1,5 +1,13 @@
                                  Muldis::D
+                                  Changes
 ---------------------------------------------------------------------------
+
+2010-05-xx
+
+    * Muldis::D version 0.129.2 is released on CPAN as
+    Muldis-D-0.129.2.tar.gz.
+
+    * (SeeAlso.pod)  Updated a few external reference urls.
 
 2010-05-17
 
@@ -14,7 +22,7 @@
 
     * Purged this distribution's "Changes" file of practically all change
     details for its approximately 147 releases numbered 0.0.0 thru 0.129.0,
-    most of those now just constituting a single bullet-point in total. If
+    most of those now just constituting a single bullet-point in total.  If
     you want to see those change descriptions, look either in the version
     control system as of tag "release-0.129.0" or in the archived
     distribution tarball named Muldis-D-0.129.0.tar.gz.
@@ -63,7 +71,7 @@
         t/Muldis_D_00_Compile.t
         TODO
 
-2010-05-16 thru 2008-04-07
+2008-04-07 thru 2010-05-16
 
     * 2010-05-16 : Muldis::D version 0.129.0.
 
